# excel-to-markdown

./: .gitignore  main.py  pyproject.toml  readme.md  run_streamlit.py
excel_to_markdown/: detector.py  main copy.py  main.py  markdown_generator.py  parser.py  utils.py
src/: app.py  utils.py
src/components/: inputs_files_selector.py  sheet_selector.py
src/pages/: column_to_doc.py  edit.py  preview.py  row_to_doc.py  select_range_to_markdown.py
tests/: test_detector.py  test_main.py  test_markdown_generator.py  test_parser.py
