[tool.poetry]
name = "excel-to-markdown"
version = "0.1.0"
description = ""
authors = ["Devin Liu <devin.r.liu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
openpyxl = "^3.1.5"

[tool.poetry.scripts]
excel-to-markdown = "excel_to_markdown.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

